# 2011-ICS

./: .hgignore  README.md  presentation question ideas.txt  videos - Shortcut.lnk
InitialOpenGL/: create-build-project.sh
InitialOpenGL/src/: BookRenderer.cpp  BookRenderer.h  CMakeLists.txt  EulerRotation.cpp  EulerRotation.h  InitOpenGL.cpp  InitOpenGL.h  ParticleBasedRotation.cpp  ParticleBasedRotation.h  QuaternionRotation.cpp  QuaternionRotation.h  RgbaImageTexture.cpp  RgbaImageTexture.h  RotationModel.cpp  RotationModel.h  RotationState.cpp  RotationState.h  matrixUtils.h  optimization-options.cmake  sample.cpp  stb_image.c  stb_image.h
docs/: Postma-Nerbonne-2011-ICS.html  generateTOC.js  keyboard shortcuts.txt  report-style.css
presentation/: draft.tex  draft.tex.backup  draft.tex~  final_presentation.tex  strings.odg
